--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
 
     // retrofit, gson
     implementation 'com.google.code.gson:gson:2.8.5'
