--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     // retrofit, gson
     implementation 'com.google.code.gson:gson:2.8.5'
