--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,37 +12,34 @@
         android:supportsRtl="true"
         android:theme="@style/MyTheme"
         android:usesCleartextTraffic="true">
-
+        <activity
+            android:name=".activity.reqBarang.ReqBarangActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.daftarReqBarang.DaftarReqBarangActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.tambahTransaksi.lama.DaftarCustomerActivity"
             android:theme="@style/AppTheme" />
-
         <activity
             android:name=".activity.tambahTransaksi.baru.TransaksiCustomerBaruActivity"
             android:theme="@style/AppTheme" />
-
         <activity
             android:name=".activity.detailTransaksi.DetailTransaksiActivity"
             android:theme="@style/AppTheme" />
-
         <activity
             android:name=".activity.daftarTransaksi.DaftarTransaksiActivity"
-            android:theme="@style/AppTheme">
-
-        </activity>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.dashboard.DashboardActivity"
             android:theme="@style/MyTheme2" />
-
         <activity android:name=".activity.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
     </application>
 
 </manifest>
